--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,12 @@ dist
 
 # TernJS port file
 .tern-port
+.DS_Store
+/client/.env.Local
+/client/.env.development.Local
+/client/.env.test.Local
+/client/.env.production.Local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
